--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/config/services.yml
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/config/services.yml
@@ -4,18 +4,24 @@ services:
         tags:
             - { name: twig.extension }
     
-    uebusaito.authentication_listener:
-        class: ReinventSoftware\UebusaitoBundle\EventListener\AuthenticationListener
-        arguments: [@service_container, @doctrine.orm.entity_manager]
+    uebusaito.error_listener:
+       class: ReinventSoftware\UebusaitoBundle\EventListener\ErrorListener
+       arguments: ['@service_container', '@doctrine.orm.entity_manager', '@router']
+       tags:
+           - { name: kernel.event_listener, event: kernel.exception, method: onKernelException }
     
     uebusaito.request_listener:
         class: ReinventSoftware\UebusaitoBundle\EventListener\RequestListener
-        arguments: [@service_container, @doctrine.orm.entity_manager]
+        arguments: ['@service_container', '@doctrine.orm.entity_manager']
         tags:
             - { name: kernel.event_listener, event: kernel.request, method: onKernelRequest }
     
+    uebusaito.authentication_listener:
+        class: ReinventSoftware\UebusaitoBundle\EventListener\AuthenticationListener
+        arguments: ['@service_container', '@doctrine.orm.entity_manager']
+    
     uebusaito.payPal_ipn_listener:
         class: ReinventSoftware\UebusaitoBundle\EventListener\PayPalIpnListener
-        arguments: [@service_container, @doctrine.orm.entity_manager]
+        arguments: ['@service_container', '@doctrine.orm.entity_manager']
         tags:
             - { name: kernel.event_listener, event: kernel.response, method: onKernelResponse }
