--- a/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/config/validation.yml
+++ b/symfony_2.8_fw/src/ReinventSoftware/UebusaitoBundle/Resources/config/validation.yml
@@ -232,7 +232,7 @@ ReinventSoftware\UebusaitoBundle\Entity\User:
                 groups: [user_creation, user_profile]
                 htmlPattern: false
                 pattern: /^[a-zA-Z]+$/
-        companyCode:
+        vat:
             - Regex:
                 groups: [user_creation, user_profile]
                 htmlPattern: false
