Code - Work in progress

--- a/symfony_2.8_fw/app/config/config.yml
+++ b/symfony_2.8_fw/app/config/config.yml
@@ -42,6 +42,9 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    # cimo +
+    globals:
+        urlRoot: %kernel.root_dir%/../web
 
 # Doctrine Configuration
 doctrine:
