--- a/symfony_3.3_fw/app/config/security.yml
+++ b/symfony_3.3_fw/app/config/security.yml
@@ -45,8 +45,8 @@ security:
                 lifetime: 3600
                 path: /
                 domain: ~
-                secure: true
-                httponly: true
+                #secure: true
+                #httponly: true
             form_login:
                 login_path: root_render
                 check_path: authentication_enter_check
