Code - Fix and update

--- a/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/config/validation.yml
+++ b/symfony_3.3_fw/src/ReinventSoftware/UebusaitoBundle/Resources/config/validation.yml
@@ -133,6 +133,13 @@ ReinventSoftware\UebusaitoBundle\Entity\Page:
                 groups: [page_profile]
                 htmlPattern: false
                 pattern: /^[a-z]+$/
+        alias:
+            - NotBlank:
+                groups: [page_creation, page_profile]
+            - Regex:
+                groups: [page_creation, page_profile]
+                htmlPattern: false
+                pattern: /^[a-z_0-9]+$/
         parent:
             - Regex:
                 groups: [page_creation, page_profile]
